# PyHandbrake

./: .gitignore  README.md  index.py  pyproject.toml
CLI/: Menu.py  app.py
HandBrake/: AudioTrack.py  Command.py  HandBrakeCLI.py  Media.py  ProcessHandler.py  TextTrack.py  VideoTrack.py
