[tool.poetry]
name = "HandBrakeCLI"
version = "0.1.0"
description = "A warpper for the HandBrakeCLI"
authors = ["Christo"]

[tool.poetry.dependencies]
python = "^3.10"
pymediainfo = "^5.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
